Display block so download isn't so stretched.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div align="center" id="qrcode">
+<div align="center" id="qrcode" style="display: block">
   <h2>SiteSoft - 19 Como Street</h2>
   <qrcode [qrdata]="'Your QR code da
   ta string'" [size]="256" [level]="'M'"></qrcode>
